[gd_scene load_steps=23 format=3 uid="uid://blysrdlx5eonv"]

[ext_resource type="Script" path="res://Scripts/mainWindow.gd" id="1_o3v1t"]
[ext_resource type="AudioStream" uid="uid://jq7232ogh2id" path="res://assets/audio/loop.mp3" id="2_cabr8"]
[ext_resource type="AudioStream" uid="uid://ctkww2cb68ij2" path="res://assets/audio/build up.mp3" id="2_pnj31"]
[ext_resource type="Shader" path="res://shader/main_window.gdshader" id="2_u8km4"]
[ext_resource type="Shader" path="res://shader/textfloat.gdshader" id="3_wsc84"]
[ext_resource type="Theme" uid="uid://ccm30crfj0bt3" path="res://theme/def theme.tres" id="4_7m4et"]
[ext_resource type="Script" path="res://Scripts/bg thing.gd" id="5_q3psa"]
[ext_resource type="Texture2D" uid="uid://q00j6uv1j5d7" path="res://assets/indexfinger.png" id="6_yipcy"]
[ext_resource type="Texture2D" uid="uid://gfwverdlvrb2" path="res://assets/settingsicon.png" id="8_s3e8v"]
[ext_resource type="Script" path="res://Scripts/HSlider.gd" id="9_7feru"]
[ext_resource type="Texture2D" uid="uid://do6kbq5d7amxx" path="res://assets/godotLogo.webp" id="9_86lb5"]
[ext_resource type="Script" path="res://Scripts/credit.gd" id="10_la3bp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5k35g"]
shader = ExtResource("2_u8km4")
shader_parameter/strength = 0.665
shader_parameter/speed = 0.3
shader_parameter/angle = 122.637

[sub_resource type="Gradient" id="Gradient_0di1y"]
offsets = PackedFloat32Array(0, 0.93038)
colors = PackedColorArray(1, 1, 1, 1, 0.51, 0.51, 0.51, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aacq4"]
gradient = SubResource("Gradient_0di1y")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5kivu"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bfu3"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfjva"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 100.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4uvf"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ervhw"]
shader = ExtResource("3_wsc84")
shader_parameter/height = 5.0

[sub_resource type="Animation" id="Animation_h7555"]
resource_name = "fade"
length = 1.78
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1ccy"]
_data = {
"fade": SubResource("Animation_h7555")
}

[node name="MainWindow" type="Node2D"]
script = ExtResource("1_o3v1t")

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_5k35g")
offset_left = -5.0
offset_top = -1.0
offset_right = 482.0
offset_bottom = 490.0
texture = SubResource("GradientTexture2D_aacq4")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_5kivu")
offset_left = 8.0
offset_top = 26.0
offset_right = 472.0
offset_bottom = 162.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 5
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 49
bbcode_enabled = true
text = "[center]Awesome 
Calculator[/center]"
scroll_active = false
autowrap_mode = 0

[node name="1stNumField1" type="OptionButton" parent="." node_paths=PackedStringArray("option1", "option2", "option3", "option4", "option5")]
offset_left = 12.0
offset_top = 182.0
offset_right = 67.0
offset_bottom = 217.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 10
selected = 0
allow_reselect = true
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9
script = ExtResource("5_q3psa")
option1 = NodePath(".")
option2 = NodePath("../1stNumField2")
option3 = NodePath("../operator")
option4 = NodePath("../2ndNumField1")
option5 = NodePath("../2ndNumField2")

[node name="1stNumField2" type="OptionButton" parent="."]
offset_left = 90.0
offset_top = 182.0
offset_right = 145.0
offset_bottom = 217.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 10
selected = 0
allow_reselect = true
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="operator" type="OptionButton" parent="."]
offset_left = 208.0
offset_top = 182.0
offset_right = 263.0
offset_bottom = 217.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 5
selected = 0
allow_reselect = true
popup/item_0/text = "+"
popup/item_0/id = 0
popup/item_1/text = "-"
popup/item_1/id = 1
popup/item_2/text = "Ã—"
popup/item_2/id = 2
popup/item_3/text = "/"
popup/item_3/id = 3
popup/item_4/text = "^"
popup/item_4/id = 4

[node name="2ndNumField1" type="OptionButton" parent="."]
offset_left = 324.0
offset_top = 182.0
offset_right = 379.0
offset_bottom = 217.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 10
selected = 0
allow_reselect = true
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="2ndNumField2" type="OptionButton" parent="."]
offset_left = 401.0
offset_top = 182.0
offset_right = 456.0
offset_bottom = 217.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 20
alignment = 1
item_count = 10
selected = 0
allow_reselect = true
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9

[node name="Calculate" type="Button" parent="."]
offset_left = 120.0
offset_top = 401.0
offset_right = 344.0
offset_bottom = 465.0
theme = ExtResource("4_7m4et")
theme_override_font_sizes/font_size = 30
text = "answer"

[node name="firstnumber" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_4bfu3")
offset_left = 16.0
offset_top = 200.0
offset_right = 149.0
offset_bottom = 274.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
bbcode_enabled = true
text = "
      first number"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="firstnumber"]
material = SubResource("ShaderMaterial_gfjva")
use_parent_material = true
layout_mode = 0
offset_left = -2.0
offset_top = 19.0
offset_right = 510.0
offset_bottom = 531.0
scale = Vector2(0.0605484, 0.0605484)
texture = ExtResource("6_yipcy")

[node name="operatortext" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_m4uvf")
offset_left = 188.0
offset_top = 200.0
offset_right = 298.0
offset_bottom = 272.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
      operator"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="operatortext"]
material = SubResource("ShaderMaterial_gfjva")
use_parent_material = true
layout_mode = 0
offset_left = -2.0
offset_top = 19.0
offset_right = 510.0
offset_bottom = 531.0
scale = Vector2(0.0605484, 0.0605484)
texture = ExtResource("6_yipcy")

[node name="2ndnymber" type="RichTextLabel" parent="."]
material = SubResource("ShaderMaterial_ervhw")
offset_left = 326.0
offset_top = 202.0
offset_right = 453.0
offset_bottom = 269.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "
      2nd number"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="2ndnymber"]
material = SubResource("ShaderMaterial_gfjva")
use_parent_material = true
layout_mode = 0
offset_left = -2.0
offset_top = 19.0
offset_right = 510.0
offset_bottom = 531.0
scale = Vector2(0.0605484, 0.0605484)
texture = ExtResource("6_yipcy")

[node name="build up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pnj31")

[node name="loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cabr8")
autoplay = true

[node name="settingsBTN" type="Button" parent="."]
offset_left = 432.0
offset_top = 8.0
offset_right = 472.0
offset_bottom = 48.0
theme = ExtResource("4_7m4et")
icon = ExtResource("8_s3e8v")
icon_alignment = 1

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i1ccy")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_left = -82.0
offset_top = -80.0
offset_right = 539.0
offset_bottom = 537.0

[node name="Window" type="Window" parent="."]
title = "settings"
initial_position = 1
size = Vector2i(440, 200)
visible = false
transient = true
unresizable = true

[node name="BG" type="TextureRect" parent="Window"]
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_5k35g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.05
offset_right = -25.05
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.33, 1.33)
size_flags_horizontal = 4
texture = SubResource("GradientTexture2D_aacq4")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Window"]
offset_left = 10.515
offset_top = 28.935
offset_right = 378.515
offset_bottom = 180.935
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]        volume slider[/center]

app by deaen
made with godot 


"
scroll_active = false
autowrap_mode = 0

[node name="TextureRect2" type="TextureRect" parent="Window"]
offset_left = 206.31
offset_top = 134.0
offset_right = 1230.31
offset_bottom = 1158.0
scale = Vector2(0.04, 0.04)
texture = ExtResource("9_86lb5")

[node name="Button" type="Button" parent="Window"]
offset_left = 256.42
offset_top = 120.26
offset_right = 430.42
offset_bottom = 172.26
text = "song: 
DEAF KEV - Invincible
"
script = ExtResource("10_la3bp")

[node name="HSlider" type="HSlider" parent="Window"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.995
offset_top = -38.0
offset_right = 212.515
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_7m4et")
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("9_7feru")
bus_name = "Master"

[connection signal="item_selected" from="1stNumField1" to="." method="_on_st_num_field_1_item_selected"]
[connection signal="item_selected" from="1stNumField2" to="." method="_on_st_num_field_2_item_selected"]
[connection signal="item_selected" from="operator" to="." method="_on_operator_item_selected"]
[connection signal="item_selected" from="2ndNumField1" to="." method="_on_nd_num_field_1_item_selected"]
[connection signal="item_selected" from="2ndNumField2" to="." method="_on_nd_num_field_2_item_selected"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="settingsBTN" to="." method="_on_button_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/Button" to="Window/Button" method="_on_pressed"]
